# hachiman-backend

./: Cargo.toml
assets/html/: index.html
src/: main.rs
src/handlers/: attendance.rs  mod.rs  students.rs
